@@ -1,4 +1,4 @@
-$NetBSD: pcidevs,v 1.938 2008/04/30 12:23:29 joerg Exp $
+$NetBSD: pcidevs,v 1.939 2008/05/08 15:33:34 sborrill Exp $
 
 /*
  * Copyright (c) 1995, 1996 Christopher G. Demetriou
@@ -2034,6 +2034,7 @@ product IBM IBMETHER	0x01ff	10/100 Ethernet
 product IBM GXT6500P	0x021b	GXT-6500P Graphics Adapter
 product IBM GXT4500P	0x021c	GXT-4500P Graphics Adapter
 product IBM GXT135P	0x0233	GXT-135P Graphics Adapter
+product IBM SERVERAID8K	0x9580	ServeRAID 8k
 product IBM MPIC2	0xffff	MPIC-II
 
 /* IC Ensemble / VIA Technologies products */
